--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "ios": "react-native run-ios"
   },
   "dependencies": {
+    "@remobile/react-native-refresh-infinite-listview": "^1.0.3",
     "react": "^0.14.8",
-    "react-native": "^0.24.1"
+    "react-native": "^0.24.1",
+    "react-native-refreshable-listview": "^2.0.0-beta4",
+    "react-native-vector-icons": "^1.3.4"
   },
   "description": "in order to learn react-native, to develop segmentfault client",
   "main": "index.os.js",
