--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@remobile/react-native-refresh-infinite-listview": "^1.0.3",
+    "events": "^1.1.0",
     "react": "^0.14.8",
     "react-native": "^0.24.1",
+    "react-native-html-render": "^1.0.3",
     "react-native-refreshable-listview": "^2.0.0-beta4",
     "react-native-vector-icons": "^1.3.4"
   },
